chore: add openapi with refactors
