# src/app/api/v1/products/route.ts
@@ -15,7 +15,11 @@ export const GET = async () => {
           collection: true,
         },
       },
-      images: true,
+      images: {
+        columns: {
+          url: true,
+        },
+      },
       options: true,
       variants: true,
     },
@@ -24,7 +28,6 @@ export const GET = async () => {
   const products = results.map((product) => ({
     ...product,
     collections: formatters.applyDataSpec(product.collections.map(({ collection }) => collection)),
-    images: product.images.map(({ cid, pid, ...image }) => formatters.applyDataSpec(image)),
     options: product.options.map(({ pid, ...option }) => formatters.applyDataSpec(option)),
     variants: product.variants.map(({ pid, ...variant }) => formatters.applyDataSpec(variant)),
   }));
